[package]
name = "enutil"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Brenno Lemos <dev@breno.codes>"]
description = "General Enum Utility Macros"
keywords = ["enum", "macros", "proc-macros", "util", "utility"]
categories = ["development-tools::procedural-macro-helpers"]
homepage = "https://github.com/Syndelis/enutil"
repository = "https://github.com/Syndelis/enutil"
readme = "../README.md"

[dependencies]
enutil_macros = { path = "../enutil_macros", optional = true, version = "0.2.0" }

[dev-dependencies]
enutil_macros = { path = "../enutil_macros" }


[features]
derive = ["enutil_macros"]
