[package]
name = "enutil_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Brenno Lemos <dev@breno.codes>"]
description = "General Enum Utility Macros"
keywords = ["enum", "macros", "proc-macros", "util", "utility"]
categories = ["development-tools::procedural-macro-helpers"]
homepage = "https://github.com/Syndelis/enutil"
repository = "https://github.com/Syndelis/enutil"
readme = "../README.md"

[lib]
proc-macro = true
name = "enutil_macros"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["parsing", "extra-traits"] }

[dev-dependencies]
enutil = { path = "../enutil" }
